hide footer on mobile-#65, update chart design and fix a bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -440,8 +440,14 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
     font-size: 2.2rem;
 }
 
-#page-official .card .card-action .official-pie-chart {
+#page-official .card .card-action .official-pie-chart, #page-official .card .card-action .official-bar-chart {
+    width: 100%;
     text-align: center;
+}
+
+#canvas-bar, #cavnas-pie {
+    width: 100%;
+    height: 350px;
 }
 
 #page-official .card .card-action .official-pie-chart h6 {
@@ -512,6 +518,10 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
 
 #nav ul.side-nav li.nav-footer img {
     width: 150px;
+}
+
+footer.page-footer {
+    display: none;
 }
 
 footer.page-footer {
@@ -655,6 +665,10 @@ footer.page-footer p {
         line-height: 2.6rem;
         letter-spacing: 0px;
     }
+
+    footer.page-footer {
+        display: block;
+    }
     
     footer.page-footer .col:last-child{
         text-align: center;
@@ -668,4 +682,4 @@ footer.page-footer p {
 #canvas-pie svg > g:not([class*="_lineGroups"]) path {
     stroke: #5c6d85 !important;
     stroke-width: 2 !important;
-} 
+}
